force-app/main/default/objects/Project__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <description>Primary contact email</description>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>