force-app/main/default/objects/Project__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <description>Primary contact person</description>
    <label>Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>