force-app/main/default/objects/Project__c/fields/ETA__c.field-meta.xml
<CustomField>
    <fullName>ETA__c</fullName>
    <description>Estimated time of arrival / ETA for the project</description>
    <label>ETA</label>
    <type>Date</type>
</CustomField>