force-app/main/default/objects/Project__c/fields/Health_System_Name__c.field-meta.xml
<CustomField>
    <fullName>Health_System_Name__c</fullName>
    <description>Health system participating in the project</description>
    <label>Health System Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>