force-app/main/default/objects/Project__c/fields/Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated__c</fullName>
    <description>Last updated date for the project</description>
    <label>Last Updated</label>
    <type>Date</type>
</CustomField>