force-app/main/default/objects/Project__c/fields/Project_Details__c.field-meta.xml
<CustomField>
    <fullName>Project_Details__c</fullName>
    <description>Long description/details about the project</description>
    <label>Project Details</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>