force-app/main/default/objects/Project__c/fields/Sponsor_Name__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Name__c</fullName>
    <description>Sponsor / organization contact</description>
    <label>Sponsor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>